Configuration Services and add models

--- a/SIV/API/appsettings.json
+++ b/SIV/API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "Connection": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=SIVDB; Integrated Security=True; Encrypt=False"
+  },
   "AllowedHosts": "*"
 }
