layer singleton, layer dto

--- a/SIV/API/appsettings.json
+++ b/SIV/API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Connection": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=SIVDB; Integrated Security=True; Encrypt=False"
+    "Connection": "Data Source=.; Initial Catalog=SIVDB; Integrated Security=True; Encrypt=False"
   },
   "AllowedHosts": "*"
 }
